# mezoni-vision

./: .env.example  .gitignore  README.md  log_test.py  pyproject.toml  requirements.txt  КАК_СОЗДАТЬ_РЕПОЗИТОРИЙ.md
